methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:14: error: Unmatched closing brace '}' ignored here
}
^